# gtest_demo

./: README.md
cmake_with_gtest/: CMakeLists.txt  README.md
cmake_with_gtest/src/:  linklist.cpp  CMakeLists.txt
cmake_with_gtest/test/: add_test.cpp
cmake_with_gtest/tests/: CMakeLists.txt
cmake_with_gtest/unittest/: CMakeLists.txt  add_unittest.cpp
cmake_with_gtest/unittests/: CMakeLists.txt
cmake_with_static_gtest/: CMakeLists.txt  README.md  add.cpp  add_test.cpp
cmake_with_static_gtest/include/: add.h
cmake_with_static_gtest/src/: CMakeLists.txt  add.cpp  main.cpp
cmake_with_static_gtest/unittest/: CMakeLists.txt  add_test.cpp
cmake_without_gtest/: CMakeLists.txt  README.md
cmake_without_gtest/src/: CMakeLists.txt
cmake_without_gtest/test/: CMakeLists.txt
cmake_without_gtest/unittest/: CMakeLists.txt  add_unittest.cpp
cmake_without_include/: CMakeLists.txt  README.md
cmake_without_include/src/: calc.h  string_util.h
cmake_without_include/unittest/: CMakeLists.txt  test_string_util.cpp
demo1/: CMakeLists.txt
demo1/gtest/: test_calc.cpp
demo1/src/: CMakeLists.txt  calc.cpp  main.cpp  string_util.cpp
demo2/: CMakeLists.txt
demo2/include/: linklist.h
demo2/src/: CMakeLists.txt
demo2/tests/: linklist_test.cpp
demo2/unittests/:  linklist_unittest.cpp  CMakeLists.txt
demo3/: CMakeLists.txt
doc/: CMake语法.md
googletest源码/: README.md  RMADME.md
